--- a/src/components/experience/experience.css
+++ b/src/components/experience/experience.css
@@ -59,7 +59,7 @@ h2{
     margin-right: 1rem;
     padding: 10px;
     border-radius: 10px;
-    background-image: linear-gradient(to right, rgba(86, 73, 202, 0.5) , rgba(159, 166, 246, 0.1));
+    background-image: linear-gradient(to right, rgba(81, 72, 160, 0.324), rgba(118, 106, 230, 0.1) , rgba(241, 242, 247, 0));
 
 }
 
